--- a/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
@@ -3,19 +3,18 @@
 {{- $skipSHSecret := .Values.skipSHSecret -}}
 {{ if not $skipSHSecret }}
 # SH secret starts
-{{- $ssawURL := or .Values.ssawURL (.Files.Get (printf "secrets/SSAW_URL.%s.secret" .Values.deployEnv)) -}}
 {{- $shUser := or .Values.shUser (.Files.Get (printf "secrets/SH_USER.%s.secret" .Values.deployEnv)) -}}
 {{- $shHost := or .Values.shHost (.Files.Get (printf "secrets/SH_HOST.%s.secret" .Values.deployEnv)) -}}
+{{- $shPort := or .Values.shPort (.Files.Get (printf "secrets/SH_PORT.%s.secret" .Values.deployEnv)) -}}
 {{- $shPass := or .Values.shPass (.Files.Get (printf "secrets/SH_PASS.%s.secret" .Values.deployEnv)) -}}
 {{- $shDB := or .Values.shDB (.Files.Get (printf "secrets/SH_DB.%s.secret" .Values.deployEnv)) -}}
-# we don not check for ssawURL presence - it can be empty
-{{ if and $shUser $shHost $shPass $shDB }}
+{{ if and $shUser $shPort $shHost $shPass $shDB }}
 ---
 apiVersion: v1
 data:
-  SSAW_URL.secret: {{ $ssawURL | b64enc }}
   SH_USER.secret: {{ $shUser | b64enc }}
   SH_HOST.secret: {{ $shHost | b64enc }}
+  SH_PORT.secret: {{ $shPort | b64enc }}
   SH_PASS.secret: {{ $shPass | b64enc }}
   SH_DB.secret: {{ $shDB | b64enc }}
 kind: Secret
@@ -148,5 +147,63 @@ type: {{ .Values.secretType }}
 missing_github_secret: "Please take a look at the NOTES.txt file"
 {{ end }}
 # GitHub secret ends
+{{ end }}
+{{- $skipAuth0Secret := .Values.skipAuth0Secret -}}
+{{ if not $skipAuth0Secret }}
+# Auth0 secret starts
+{{- $auth0URL := or .Values.auth0URL (.Files.Get (printf "secrets/AUTH0_URL.%s.secret" .Values.deployEnv)) -}}
+{{- $auth0Audience := or .Values.auth0Audience (.Files.Get (printf "secrets/AUTH0_AUDIENCE.%s.secret" .Values.deployEnv)) -}}
+{{- $auth0ClientID := or .Values.auth0ClientID (.Files.Get (printf "secrets/AUTH0_CLIENT_ID.%s.secret" .Values.deployEnv)) -}}
+{{- $auth0ClientSecret := or .Values.auth0ClientSecret (.Files.Get (printf "secrets/AUTH0_CLIENT_SECRET.%s.secret" .Values.deployEnv)) -}}
+{{ if and $auth0URL $auth0Audience $auth0ClientID $auth0ClientSecret }}
+---
+apiVersion: v1
+data:
+  AUTH0_URL.secret: {{ $auth0URL | b64enc }}
+  AUTH0_AUDIENCE.secret: {{ $auth0Audience | b64enc }}
+  AUTH0_CLIENT_ID.secret: {{ $auth0ClientID | b64enc }}
+  AUTH0_CLIENT_SECRET.secret: {{ $auth0ClientSecret | b64enc }}
+kind: Secret
+metadata:
+  namespace: '{{ .Values.namespace }}'
+  name: {{ .Values.auth0Secret }}
+  labels:
+    type: 'secret'
+{{- with .Values.labels -}}
+{{ toYaml . | nindent 4 }}
+{{ end }}
+    app.kubernetes.io/name: {{ include "sds-helm.name" . }}
+    helm.sh/chart: {{ include "sds-helm.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+type: {{ .Values.secretType }}
+{{ else }}
+missing_one_or_more_auth0_secrets: "Please take a look at the NOTES.txt file"
+{{ end }}
+# Auth0 secret ends
+{{ end }}
+{{- $skipSSAWSecret := .Values.skipSSAWSecret -}}
+{{ if not $skipSSAWSecret }}
+# SSAW secret starts
+{{- $ssawURL := or .Values.ssawURL (.Files.Get (printf "secrets/SSAW_URL.%s.secret" .Values.deployEnv)) -}}
+---
+apiVersion: v1
+data:
+  SSAW_URL.secret: {{ $ssawURL | b64enc }}
+kind: Secret
+metadata:
+  namespace: '{{ .Values.namespace }}'
+  name: {{ .Values.ssawSecret }}
+  labels:
+    type: 'secret'
+{{- with .Values.labels -}}
+{{ toYaml . | nindent 4 }}
+{{ end }}
+    app.kubernetes.io/name: {{ include "sds-helm.name" . }}
+    helm.sh/chart: {{ include "sds-helm.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+type: {{ .Values.secretType }}
+# SSAW secret ends
 {{ end }}
 {{ end }}
