Adding DA affiliations API URL params 2
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -171,6 +171,11 @@ spec:
         secretKeyRef:
           name: {{ $root.Values.ssawSecret }}
           key: SSAW_URL.secret
+    - name: AFFILIATION_API_URL
+      valueFrom:
+        secretKeyRef:
+          name: {{ $root.Values.apiSecret }}
+          key: AFFILIATION_API_URL.secret
     - name: SH_USER
       valueFrom:
         secretKeyRef:
