--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -13,6 +13,7 @@
 # auth0ClientID: ''
 # auth0ClientSecret: ''
 # ssawURL: ''
+# affiliationAPIURL: ''
 #
 # You can skip some parts of the deployment (useful when deploying partailly again)
 # skipCron (will not create a new cron job, you should set it when cron job is already created, if you want to recreate a cron job, delete the existing one first and do not set this flag)
@@ -24,6 +25,7 @@
 # skipRepoSecret (will skip creating repo access secret)
 # skipAuth0Secret (will skip creating Auth0 secret)
 # skipSSAWSecret (will skip creating SSAW secret)
+# skipAPISecret (will skip creating API secret)
 # skipNamespace (will skip sds namespace creation)
 # skipPV (will skip persistent volume creation)
 #
@@ -37,6 +39,7 @@
 # skipRepoSecret: 1
 # skipAuth0Secret: 1
 # skipSSAWSecret: 1
+# skipAPISecret: 1
 # skipPV: 1
 #
 # sync-data-sources binary Environmental options (see README.md or NOTES.txt)
@@ -150,6 +153,7 @@ skipHideEmails: ''
 skipP2O: ''
 skipValGitHubAPI: ''
 skipSSAW: ''
+skipAPI: ''
 onlyValidate: ''
 onlyP2O: ''
 noMultiAliases: ''
@@ -186,6 +190,7 @@ githubSecret: github-oauth
 repoSecret: repo-secret
 auth0Secret: auth0-secret
 ssawSecret: ssaw-secret
+apiSecret: api-secret
 pvName: sds
 pvAccessMode: ReadWriteOnce
 pvStorageClass: openebs-hostpath
