--- a/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
@@ -206,4 +206,28 @@ metadata:
 type: {{ .Values.secretType }}
 # SSAW secret ends
 {{ end }}
+{{- $skipAPISecret := .Values.skipAPISecret -}}
+{{ if not $skipAPISecret }}
+# API secret starts
+{{- $affiliationAPIURL := or .Values.affiliationAPIURL (.Files.Get (printf "secrets/AFFILIATION_API_URL.%s.secret" .Values.deployEnv)) -}}
+---
+apiVersion: v1
+data:
+  AFFILIATION_API_URL.secret: {{ $affiliationAPIURL | b64enc }}
+kind: Secret
+metadata:
+  namespace: '{{ .Values.namespace }}'
+  name: {{ .Values.apiSecret }}
+  labels:
+    type: 'secret'
+{{- with .Values.labels -}}
+{{ toYaml . | nindent 4 }}
+{{ end }}
+    app.kubernetes.io/name: {{ include "sds-helm.name" . }}
+    helm.sh/chart: {{ include "sds-helm.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+type: {{ .Values.secretType }}
+# API secret ends
+{{ end }}
 {{ end }}
