--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -185,6 +185,11 @@ spec:
                 secretKeyRef:
                   name: {{ $root.Values.ssawSecret }}
                   key: SSAW_URL.secret
+            - name: AFFILIATION_API_URL
+              valueFrom:
+                secretKeyRef:
+                  name: {{ $root.Values.apiSecret }}
+                  key: AFFILIATION_API_URL.secret
             - name: SH_USER
               valueFrom:
                 secretKeyRef:
