--- a/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
@@ -185,7 +185,7 @@ missing_one_or_more_auth0_secrets: "Please take a look at the NOTES.txt file"
 {{- $skipSSAWSecret := .Values.skipSSAWSecret -}}
 {{ if not $skipSSAWSecret }}
 # SSAW secret starts
-{{- $ssawURL := or .Values.ssawURL (.Files.Get (printf "secrets/SSAW_URL.%s.secret" .Values.deployEnv)) -}}
+{{ $ssawURL := or .Values.ssawURL (.Files.Get (printf "secrets/SSAW_URL.%s.secret" .Values.deployEnv)) -}}
 ---
 apiVersion: v1
 data:
@@ -209,7 +209,7 @@ type: {{ .Values.secretType }}
 {{- $skipAPISecret := .Values.skipAPISecret -}}
 {{ if not $skipAPISecret }}
 # API secret starts
-{{- $affiliationAPIURL := or .Values.affiliationAPIURL (.Files.Get (printf "secrets/AFFILIATION_API_URL.%s.secret" .Values.deployEnv)) -}}
+{{ $affiliationAPIURL := or .Values.affiliationAPIURL (.Files.Get (printf "secrets/AFFILIATION_API_URL.%s.secret" .Values.deployEnv)) -}}
 ---
 apiVersion: v1
 data:
