https://developers.google.com/pay/api/web/guides/brand-guidelines#payment-buttons-assets
https://developers.google.com/pay/api/web/guides/brand-guidelines#payment-buttons-assets

--- a/repo_access.secret.example
+++ b/repo_access.secret.example
@@ -1,1 +1,1 @@
-https://github_id:github_oauth2_token@github.com/LF-Engineering/dev-analytics-api
+httpsVarocomlilicombitcoingooglepa://github_id:github_oauth2_token@github.com/LF-Engineering/dev-analytics-api
