--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -75,10 +75,12 @@
 # datasourcesRE: '^git$'
 # projectsRE: '[nN]etwork'
 # endpointsRE: '\.gerrit\.'
+# tasksRE: '-bugzilla-'
 # fixturesSkipRE: '^lfn/.*'
 # datasourcesSkipRE: '^git$'
 # projectsSkipRE: '[nN]etwork'
 # endpointsSkipRE: '\.gerrit\.'
+# tasksSkipRE: '-bugzilla-'
 # dryRun: '1'
 # dryRunCode: '4'
 # dryRunSeconds: '1'
