Adding support for skipping re-enrich phase on specific data source types
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -113,6 +113,7 @@
 # scrollWait: '30'
 # scrollSize: '10000'
 # silent: 'y'
+# skipReenrich: 'jira,gerrit,bugzilla,confluence'
 # maxDeleteTrials: '5'
 # noMultiAliases: '1'
 # cleanupAliases: '1'
@@ -166,6 +167,7 @@ esBulkSize: ''
 scrollWait: ''
 scrollSize: ''
 silent: ''
+skipReenrich: ''
 maxDeleteTrials: ''
 useRepoAccess: '1'
 concurrencyPolicy: Forbid
