--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -178,6 +178,8 @@ spec:
               value: '{{ $root.Values.scrollSize }}'
             - name: SDS_SILENT
               value: '{{ $root.Values.silent }}'
+            - name: SDS_SKIP_REENRICH
+              value: '{{ $root.Values.skipReenrich }}'
             - name: SDS_MAX_DELETE_TRIALS
               value: '{{ $root.Values.maxDeleteTrials }}'
             - name: BRANCH
