Adding support for map_org_names API 2
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -118,6 +118,8 @@ spec:
       value: '{{ $root.Values.skipMerge }}'
     - name: SDS_SKIP_HIDE_EMAILS
       value: '{{ $root.Values.skipHideEmails }}'
+    - name: SDS_SKIP_ORG_MAP
+      value: '{{ $root.Values.skipOrgMap }}'
     - name: SDS_SKIP_P2O
       value: '{{ $root.Values.skipP2O }}'
     - name: SDS_SKIP_SSAW
