--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -100,6 +100,7 @@
 # skipSortDuration: '1'
 # skipMerge: '1'
 # skipHideEmails: '1'
+# skipOrgMap: '1'
 # skipP2O: '1'
 # skipValGitHubAPI: '1'
 # skipCheckFreq: 'y'
@@ -153,6 +154,7 @@ skipSyncInfo: ''
 skipSortDuration: ''
 skipMerge: ''
 skipHideEmails: ''
+skipOrgMap: ''
 skipP2O: ''
 skipValGitHubAPI: ''
 skipSSAW: ''
