This will be the config to get rocket chat server's channels
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/sources/example/project1.yaml
+++ b/sources/example/project1.yaml
@@ -6,7 +6,18 @@ data_sources:
   projects:
   - name: hyperledger
     endpoints:
-    - name: "https://chat.hyperledger.org general" 
+    - name: "https://chat.hyperledger.org general"
+    - name: https://chat.hyperledger.org
+      flags:
+        type: rocketchat_server
+      skip:
+      - '(?i)sdk'
+      - '(?i)lab'
+      only:
+      - '(?i)fabric'
+      - '(?i)indy'
+      - '(?i)sawtooth'
+      - '(?i)aries'
   config:
   - name: api-token
     value: XXX_XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX-XXXX
