--- a/sources/example/project1.yaml
+++ b/sources/example/project1.yaml
@@ -86,6 +86,7 @@ data_sources:
   - name: edgex
     endpoints:
     - name: https://wiki.edgexfoundry.org
+      timeout: "18h30m"
 - slug: groupsio
   projects:
   - name: edgex
@@ -106,6 +107,7 @@ data_sources:
 - slug: jira
   endpoints:
   - name: https://jira.o-ran-sc.org
+    timeout: "24h"
   config:
   - name: project
     value: NONRTRIC
