--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -101,6 +101,7 @@
 # skipMerge: '1'
 # skipHideEmails: '1'
 # skipOrgMap: '1'
+# skipDetAffRange: '1'
 # skipP2O: '1'
 # skipValGitHubAPI: '1'
 # skipCheckFreq: 'y'
@@ -155,6 +156,7 @@ skipSortDuration: ''
 skipMerge: ''
 skipHideEmails: ''
 skipOrgMap: ''
+skipDetAffRange: ''
 skipP2O: ''
 skipValGitHubAPI: ''
 skipSSAW: ''
