--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -101,7 +101,7 @@
 # skipMerge: '1'
 # skipHideEmails: '1'
 # skipOrgMap: '1'
-# skipDetAffRange: '1'
+# runDetAffRange: '1'
 # skipP2O: '1'
 # skipValGitHubAPI: '1'
 # skipCheckFreq: 'y'
@@ -156,7 +156,6 @@ skipSortDuration: ''
 skipMerge: ''
 skipHideEmails: ''
 skipOrgMap: ''
-skipDetAffRange: ''
 skipP2O: ''
 skipValGitHubAPI: ''
 skipSSAW: ''
@@ -164,6 +163,7 @@ skipAPI: ''
 onlyValidate: ''
 onlyP2O: ''
 noMultiAliases: ''
+runDetAffRange: ''
 cleanupAliases: ''
 stripErrorSize: ''
 esURL: ''
