--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -100,6 +100,7 @@
 # skipSortDuration: '1'
 # skipMerge: '1'
 # skipHideEmails: '1'
+# skipCopyFrom: '1'
 # skipOrgMap: '1'
 # runDetAffRange: '1'
 # skipP2O: '1'
@@ -155,6 +156,7 @@ skipSyncInfo: ''
 skipSortDuration: ''
 skipMerge: ''
 skipHideEmails: ''
+skipCopyFrom: ''
 skipOrgMap: ''
 skipP2O: ''
 skipValGitHubAPI: ''
