--- a/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
@@ -230,4 +230,39 @@ metadata:
 type: {{ .Values.secretType }}
 # API secret ends
 {{ end }}
+{{- $skipSSOSecret := .Values.skipSSOSecret -}}
+{{ if not $skipSSOSecret }}
+# SSO secret starts
+{{- $ssoAPIKey := or .Values.ssoAPIKey (.Files.Get "secrets/SSO_API_KEY.secret") -}}
+{{- $ssoAPISecret := or .Values.ssoAPISecret (.Files.Get "secrets/SSO_API_SECRET.secret") -}}
+{{- $ssoAudience := or .Values.ssoAudience (.Files.Get "secrets/SSO_AUDIENCE.secret") -}}
+{{- $ssoUserService := or .Values.ssoUserService (.Files.Get "secrets/SSO_USER_SERVICE.secret") -}}
+{{- $userServiceURL := or .Values.userServiceURL (.Files.Get "secrets/USER_SERVICE_URL.secret") -}}
+{{ if $githubOAuth }}
+---
+apiVersion: v1
+data:
+  SSO_API_KEY.secret: {{ $ssoAPIKey | b64enc }}
+  SSO_API_SECRET.secret: {{ $ssoAPISecret | b64enc }}
+  SSO_AUDIENCE.secret: {{ $ssoAudience | b64enc }}
+  SSO_USER_SERVICE.secret: {{ $ssoUserService | b64enc }}
+  USER_SERVICE_URL.secret: {{ $userServiceURL | b64enc }}
+kind: Secret
+metadata:
+  namespace: '{{ .Values.namespace }}'
+  name: {{ .Values.ssoSecret }}
+  labels:
+    type: 'secret'
+{{- with .Values.labels -}}
+{{ toYaml . | nindent 4 }}
+{{ end }}
+    app.kubernetes.io/name: {{ include "sds-helm.name" . }}
+    helm.sh/chart: {{ include "sds-helm.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+type: {{ .Values.secretType }}
+{{ else }}
+missing_github_secret: "Please take a look at the NOTES.txt file"
+{{ end }}
+# SSO secret ends
 {{ end }}
