--- a/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
@@ -233,12 +233,12 @@ type: {{ .Values.secretType }}
 {{- $skipSSOSecret := .Values.skipSSOSecret -}}
 {{ if not $skipSSOSecret }}
 # SSO secret starts
-{{- $ssoAPIKey := or .Values.ssoAPIKey (.Files.Get "secrets/SSO_API_KEY.secret") -}}
-{{- $ssoAPISecret := or .Values.ssoAPISecret (.Files.Get "secrets/SSO_API_SECRET.secret") -}}
-{{- $ssoAudience := or .Values.ssoAudience (.Files.Get "secrets/SSO_AUDIENCE.secret") -}}
-{{- $ssoUserService := or .Values.ssoUserService (.Files.Get "secrets/SSO_USER_SERVICE.secret") -}}
-{{- $userServiceURL := or .Values.userServiceURL (.Files.Get "secrets/USER_SERVICE_URL.secret") -}}
-{{ if $githubOAuth }}
+{{- $ssoAPIKey := or .Values.ssoAPIKey (.Files.Get (printf "secrets/SSO_API_KEY.%s.secret" .Values.deployEnv)) -}}
+{{- $ssoAPISecret := or .Values.ssoAPISecret (.Files.Get (printf "secrets/SSO_API_SECRET.%s.secret" .Values.deployEnv)) -}}
+{{- $ssoAudience := or .Values.ssoAudience (.Files.Get (printf "secrets/SSO_AUDIENCE.%s.secret" .Values.deployEnv)) -}}
+{{- $ssoUserService := or .Values.ssoUserService (.Files.Get (printf "secrets/SSO_USER_SERVICE.%s.secret" .Values.deployEnv)) -}}
+{{- $userServiceURL := or .Values.userServiceURL (.Files.Get (printf "secrets/USER_SERVICE_URL.%s.secret" .Values.deployEnv)) -}}
+{{ if and $ssoAPIKey $ssoAPISecret $ssoAudience $ssoUserService $userServiceURL }}
 ---
 apiVersion: v1
 data:
@@ -262,7 +262,8 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 type: {{ .Values.secretType }}
 {{ else }}
-missing_github_secret: "Please take a look at the NOTES.txt file"
+missing_sso_secret: "Please take a look at the NOTES.txt file"
 {{ end }}
 # SSO secret ends
+{{ end }}
 {{ end }}
