Adding support for calling DA-metrics enrich ds API 3
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
@@ -210,10 +210,12 @@ type: {{ .Values.secretType }}
 {{ if not $skipAPISecret }}
 # API secret starts
 {{ $affiliationAPIURL := or .Values.affiliationAPIURL (.Files.Get (printf "secrets/AFFILIATION_API_URL.%s.secret" .Values.deployEnv)) -}}
+{{ $metricsAPIURL := or .Values.metricsAPIURL (.Files.Get (printf "secrets/METRICS_API_URL.%s.secret" .Values.deployEnv)) -}}
 ---
 apiVersion: v1
 data:
   AFFILIATION_API_URL.secret: {{ $affiliationAPIURL | b64enc }}
+  METRICS_API_URL.secret: {{ $metricsAPIURL | b64enc }}
 kind: Secret
 metadata:
   namespace: '{{ .Values.namespace }}'
