--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -14,6 +14,7 @@
 # auth0ClientSecret: ''
 # ssawURL: ''
 # affiliationAPIURL: ''
+# metricsAPIURL: ''
 # ssoAPIKey: ''
 # ssoAPISecret: ''
 # ssoAudience: ''
@@ -109,6 +110,7 @@
 # skipHideEmails: '1'
 # skipCopyFrom: '1'
 # skipOrgMap: '1'
+# skipEnrichDS: '1'
 # runDetAffRange: '1'
 # skipP2O: '1'
 # skipValGitHubAPI: '1'
@@ -165,6 +167,7 @@ skipMerge: ''
 skipHideEmails: ''
 skipCopyFrom: ''
 skipOrgMap: ''
+skipEnrichDS: ''
 skipP2O: ''
 skipValGitHubAPI: ''
 skipSSAW: ''
