--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -5,8 +5,8 @@ environments:
   - name: main
     master: true                        # main task, this one will also process all special SDS task, other tasks will receive "SDS_ONLY_P2O=1"
     cron: '*/10 * * * *'
-    command_prefix: '/usr/bin/'
-    csv_prefix: '/root/'
+    command_prefix: '/usr/bin'
+    csv_prefix: '/root'
     cron_env: 'PATH=$PATH:/snap/bin'
     env:
       SDS_SILENT: 1
@@ -17,8 +17,8 @@ environments:
       SDS_TASKS_SKIP_RE: '^sds-cncf-'
   - name: cncf
     cron: '0 8 * * *'
-    command_prefix: '/usr/bin/'
-    csv_prefix: '/root/'
+    command_prefix: '/usr/bin'
+    csv_prefix: '/root'
     cron_env: 'PATH=$PATH:/snap/bin'
     deploy_env: prod
     env:
@@ -33,8 +33,8 @@ environments:
   - name: main
     master: true
     cron: '0 * * * *'
-    command_prefix: '/usr/bin/'
-    csv_prefix: '/root/'
+    command_prefix: '/usr/bin'
+    csv_prefix: '/root'
     cron_env: 'PATH=$PATH:/snap/bin'
     env:
       SDS_SILENT: 1
@@ -44,8 +44,8 @@ environments:
       SDS_TASKS_SKIP_RE: '(project1-bugzilla|project1-gerrit|project1-rocketchat|academy-software-foundation-openshadinglanguage-github)'
   - name: slow
     cron: '*/10 * * * *'
-    command_prefix: '/usr/bin/'
-    csv_prefix: '/root/'
+    command_prefix: '/usr/bin'
+    csv_prefix: '/root'
     cron_env: 'PATH=$PATH:/snap/bin'
     env:
       SDS_SKIP_REENRICH: 'jira,gerrit,confluence,bugzilla'
