--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -52,7 +52,7 @@ environments:
     cron_env: 'PATH=$PATH:/snap/bin'
     temp_dir: '/tmp'
     env:
-      # SDS_SKIP_REENRICH: 'jira,gerrit,confluence,bugzilla' # passing incremental date from is now supported 9after p2o patch), so this is no longer needed
+      # SDS_SKIP_REENRICH: 'jira,gerrit,confluence,bugzilla' # passing incremental date from is now supported (after p2o patch), so this is no longer needed
       SDS_SILENT: 1
       SDS_ES_BULKSIZE: 100
       SDS_TASKS_RE: '(project1-bugzilla|project1-gerrit|project1-rocketchat|academy-software-foundation-openshadinglanguage-github)'
