--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -26,7 +26,7 @@ environments:
     env:
       SDS_SILENT: 1
       SDS_TASK_TIMEOUT_SECONDS: 43200
-      SDS_NCPUS_SCALE: 0.3
+      SDS_NCPUS_SCALE: 0.3              # here we give max 30% of CPU cores available. So if OS reorts say 10 CPU cores, at most 3 threads will be used.
       SDS_SCROLL_SIZE: 1000
       SDS_ES_BULKSIZE: 1000
       SDS_TASKS_RE: '^sds-cncf-'        # the opposite of the main task - we specify which tasks should run in this deployment (instead of specifying which tasks should be skipped as in prod-main deployment)
