--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -15,7 +15,7 @@ environments:
       SDS_NCPUS_SCALE: 1.5              # attempt to create 1.5 * number of CPU cores tasks for this deployment
       SDS_SCROLL_SIZE: 500
       SDS_ES_BULKSIZE: 500
-      SDS_TASKS_SKIP_RE: '^sds-(cncf|cord-central-office-re-architected-as-a-datacenter|cregit|datapractices|gql|finos|elisa|finops|frr|allseen|accord|acrn|acr|act|agl|bitcoin-protocol|chaoss|chips|cip|caf|ccc|cdf|tizen|ucf|cephfoundation)-'   # specifying which tasks should be skipped, can be something like '^sds-(foundation1|foundation2|...|foundationN)-'
+      SDS_TASKS_SKIP_RE: '^sds-(open-mainframe-project|tlf|cncf|cip|todogroup|agl|openmama|xen|openchain|opencontainers|ojsf|tizen|caf|openapi|ovs|internet-security-research-group|openhpc|rcons|real-time-linux|openfabrics-inc|osecc|onf|newticity|quartermaster|opensds|cephfoundation|mojaglobal|kernelci|elisa|act|cdf|chips|gql|decentralized-identity-foundation-dif|aomedia|chaoss|tars|ucf|osquery|openpowerfoundation|presto|ccc|reactive|interuss|dent|risc-v-international|soda-foundation|sel4|toip|open-voice-network|finos)-'   # specifying which tasks should be skipped, can be something like '^sds-(foundation1|foundation2|...|foundationN)-'
   - name: prod-cncf
     cron: '0 8 * * *'                   # attempt sync at 8 AM UTC, nothing will happen if the previous sync still runs
     command_prefix: '/usr/bin'
@@ -43,7 +43,8 @@ environments:
       SDS_NCPUS_SCALE: 0.3
       SDS_SCROLL_SIZE: 1000
       SDS_ES_BULKSIZE: 1000
-      SDS_TASKS_RE: '^sds-(cord-central-office-re-architected-as-a-datacenter|cregit|datapractices|gql|finos|elisa|finops|frr|allseen|accord|acrn|acr|act|agl|bitcoin-protocol|chaoss|chips|cip|caf|ccc|cdf|tizen|ucf|cephfoundation)-'
+      SDS_TASKS_RE: '^sds-(open-mainframe-project|tlf|cncf|cip|todogroup|agl|openmama|xen|openchain|opencontainers|ojsf|tizen|caf|openapi|ovs|internet-security-research-group|openhpc|rcons|real-time-linux|openfabrics-inc|osecc|onf|newticity|quartermaster|opensds|cephfoundation|mojaglobal|kernelci|elisa|act|cdf|chips|gql|decentralized-identity-foundation-dif|aomedia|chaoss|tars|ucf|osquery|openpowerfoundation|presto|ccc|reactive|interuss|dent|risc-v-international|soda-foundation|sel4|toip|open-voice-network|finos)-'
+
 - name: test                            # this will run on the 'test' env
   deployments:
   - name: test-main
