Add support to skip indices drop, handle GH APi limits nicely, handle errors from external data fetch like gh org/user, dockerhub etc.
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -154,6 +154,8 @@ spec:
               value: '{{ $root.Values.cleanupAliases }}'
             - name: SDS_SKIP_DROP_UNUSED
               value: '{{ $root.Values.skipDropUnused }}'
+            - name: SDS_NO_INDEX_DROP
+              value: '{{ $root.Values.noIndexDrop }}'
             - name: SDS_NODE_HASH
               value: '{{ $root.Values.nodeHash }}'
             - name: SDS_NODE_NUM
