--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -100,6 +100,7 @@
 # skipAffs: '1'
 # skipAliases: '1'
 # skipDropUnused: '1'
+# noIndexDrop: '1'
 # skipDedup: '1'
 # skipExternal: '1'
 # skipProject: '1'
@@ -154,6 +155,7 @@ skipData: ''
 skipAffs: ''
 skipAliases: ''
 skipDropUnused: ''
+noIndexDrop: ''
 skipCheckFreq: ''
 skipEsData: ''
 skipEsLog: ''
