--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -11,6 +11,7 @@ environments:
     temp_dir: '/tmp'
     env:                                # List of all possible SDS env variables is here: https://github.com/LF-Engineering/sync-data-sources/blob/master/sources/context.go#L12
       SDS_SILENT: 1
+      SDS_NO_INDEX_DROP: 1              # Do not delete any indices, just issue a warning instead
       SDS_TASK_TIMEOUT_SECONDS: 43200
       SDS_NCPUS_SCALE: 1.5              # attempt to create 1.5 * number of CPU cores tasks for this deployment
       SDS_SCROLL_SIZE: 500
@@ -56,6 +57,7 @@ environments:
     temp_dir: '/tmp'
     env:
       SDS_SILENT: 1
+      SDS_NO_INDEX_DROP: 1              # Do not delete any indices, just issue a warning instead
       SDS_NCPUS_SCALE: 2
       SDS_SCROLL_SIZE: 500
       SDS_ES_BULKSIZE: 500
