--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -16,7 +16,7 @@ environments:
       SDS_NCPUS_SCALE: 1.5              # attempt to create 1.5 * number of CPU cores tasks for this deployment
       SDS_SCROLL_SIZE: 500
       SDS_ES_BULKSIZE: 500
-      SDS_TASKS_SKIP_RE: '^sds-(open-mainframe-project|bitcoin-protocol|iovisor|frr|finops|tlf|cncf|cip|todogroup|agl|acr|acrn|openmama|xen|openchain|opencontainers|ojsf|tizen|caf|openapi|ovs|internet-security-research-group|openhpc|rcons|real-time-linux|openfabrics-inc|osecc|onf|newticity|quartermaster|opensds|cephfoundation|mojaglobal|kernelci|elisa|act|cdf|chips|gql|decentralized-identity-foundation-dif|aomedia|chaoss|tars|ucf|osquery|openpowerfoundation|presto|ccc|reactive|interuss|dent|risc-v-international|soda-foundation|sel4|toip|open-voice-network|finos|internet-security-research-group|janusgraph|osjf)-'   # specifying which tasks should be skipped, can be something like '^sds-(foundation1|foundation2|...|foundationN)-'
+      SDS_TASKS_SKIP_RE: '^sds-(lfn-odl-gerrit|open-mainframe-project|bitcoin-protocol|iovisor|frr|finops|tlf|cncf|cip|todogroup|agl|acr|acrn|openmama|xen|openchain|opencontainers|ojsf|tizen|caf|openapi|ovs|internet-security-research-group|openhpc|rcons|real-time-linux|openfabrics-inc|osecc|onf|newticity|quartermaster|opensds|cephfoundation|mojaglobal|kernelci|elisa|act|cdf|chips|gql|decentralized-identity-foundation-dif|aomedia|chaoss|tars|ucf|osquery|openpowerfoundation|presto|ccc|reactive|interuss|dent|risc-v-international|soda-foundation|sel4|toip|open-voice-network|finos|internet-security-research-group|janusgraph|osjf)-'   # specifying which tasks should be skipped, can be something like '^sds-(foundation1|foundation2|...|foundationN)-'
   - name: prod-cncf
     cron: '0 8 * * *'                   # attempt sync at 8 AM UTC, nothing will happen if the previous sync still runs
     command_prefix: '/usr/bin'
@@ -44,7 +44,7 @@ environments:
       SDS_NCPUS_SCALE: 0.3
       SDS_SCROLL_SIZE: 1000
       SDS_ES_BULKSIZE: 1000
-      SDS_TASKS_RE: '^sds-(open-mainframe-project|bitcoin-protocol|frr|iovisor|finops|tlf|cncf|cip|todogroup|agl|acr|acrn|openmama|xen|openchain|opencontainers|ojsf|tizen|caf|openapi|ovs|internet-security-research-group|openhpc|rcons|real-time-linux|openfabrics-inc|osecc|onf|newticity|quartermaster|opensds|cephfoundation|mojaglobal|kernelci|elisa|act|cdf|chips|gql|decentralized-identity-foundation-dif|aomedia|chaoss|tars|ucf|osquery|openpowerfoundation|presto|ccc|reactive|interuss|dent|risc-v-international|soda-foundation|sel4|toip|open-voice-network|finos|internet-security-research-group|janusgraph|osjf)-'
+      SDS_TASKS_RE: '^sds-(lfn-odl-gerrit|open-mainframe-project|bitcoin-protocol|frr|iovisor|finops|tlf|cncf|cip|todogroup|agl|acr|acrn|openmama|xen|openchain|opencontainers|ojsf|tizen|caf|openapi|ovs|internet-security-research-group|openhpc|rcons|real-time-linux|openfabrics-inc|osecc|onf|newticity|quartermaster|opensds|cephfoundation|mojaglobal|kernelci|elisa|act|cdf|chips|gql|decentralized-identity-foundation-dif|aomedia|chaoss|tars|ucf|osquery|openpowerfoundation|presto|ccc|reactive|interuss|dent|risc-v-international|soda-foundation|sel4|toip|open-voice-network|finos|internet-security-research-group|janusgraph|osjf)-'
 
 - name: test                            # this will run on the 'test' env
   deployments:
