add korg deployment

--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -16,7 +16,7 @@ environments:
       SDS_NCPUS_SCALE: 1.5              # attempt to create 1.5 * number of CPU cores tasks for this deployment
       SDS_SCROLL_SIZE: 500
       SDS_ES_BULKSIZE: 500
-      SDS_TASKS_SKIP_RE: '^sds-(lfn-odl-gerrit|open-mainframe-project|bitcoin-protocol|iovisor|frr|finops|tlf|cncf|cip|todogroup|agl|acr|acrn|openmama|xen|openchain|opencontainers|ojsf|tizen|caf|openapi|ovs|internet-security-research-group|openhpc|rcons|real-time-linux|openfabrics-inc|osecc|onf|newticity|quartermaster|opensds|cephfoundation|mojaglobal|kernelci|elisa|act|cdf|chips|decentralized-identity-foundation-dif|aomedia|chaoss|tars|ucf|osquery|openpowerfoundation|presto|ccc|reactive|interuss|dent|risc-v-international|soda-foundation|sel4|toip|open-voice-network|finos|internet-security-research-group|janusgraph|osjf)-'   # specifying which tasks should be skipped, can be something like '^sds-(foundation1|foundation2|...|foundationN)-'
+      SDS_TASKS_SKIP_RE: '^sds-(lfn-odl-gerrit|open-mainframe-project|bitcoin-protocol|iovisor|frr|finops|tlf|cncf|korg|cip|todogroup|agl|acr|acrn|openmama|xen|openchain|opencontainers|ojsf|tizen|caf|openapi|ovs|internet-security-research-group|openhpc|rcons|real-time-linux|openfabrics-inc|osecc|onf|newticity|quartermaster|opensds|cephfoundation|mojaglobal|kernelci|elisa|act|cdf|chips|decentralized-identity-foundation-dif|aomedia|chaoss|tars|ucf|osquery|openpowerfoundation|presto|ccc|reactive|interuss|dent|risc-v-international|soda-foundation|sel4|toip|open-voice-network|finos|internet-security-research-group|janusgraph|osjf)-'   # specifying which tasks should be skipped, can be something like '^sds-(foundation1|foundation2|...|foundationN)-'
   - name: prod-cncf
     cron: '0 8 * * *'                   # attempt sync at 8 AM UTC, nothing will happen if the previous sync still runs
     command_prefix: '/usr/bin'
@@ -31,6 +31,20 @@ environments:
       SDS_SCROLL_SIZE: 1000
       SDS_ES_BULKSIZE: 1000
       SDS_TASKS_RE: '^sds-cncf-'        # the opposite of the main task - we specify which tasks should run in this deployment (instead of specifying which tasks should be skipped as in prod-main deployment)
+  - name: prod-korg
+    cron: '0 8 * * *'                   # attempt sync at 8 AM UTC, nothing will happen if the previous sync still runs
+    command_prefix: '/usr/bin'
+    csv_prefix: '/root'
+    cron_env: 'PATH=$PATH:/snap/bin'
+    temp_dir: '/tmp'
+    deploy_env: prod
+    env:
+      SDS_SILENT: 1
+      SDS_TASK_TIMEOUT_SECONDS: 43200
+      SDS_NCPUS_SCALE: 0.3              # here we give max 30% of CPU cores available. So if OS reorts say 10 CPU cores, at most 3 threads will be used.
+      SDS_SCROLL_SIZE: 1000
+      SDS_ES_BULKSIZE: 1000
+      SDS_TASKS_RE: '^sds-korg-'        # the opposite of the main task - we specify which tasks should run in this deployment (instead of specifying which tasks should be skipped as in prod-main deployment)
   - name: prod-others
     cron: '0 20 * * *'                   # attempt sync at 8 PM UTC, nothing will happen if the previous sync still runs
     command_prefix: '/usr/bin'
