Add support for private GitHub OAuth tokens
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/sources/example/project1.yaml
+++ b/sources/example/project1.yaml
@@ -31,6 +31,8 @@ data_sources:
       config: &github_config
       - name: api-token
         value: "[1111111111111111111111111111111111111111,2222222222222222222222222222222222222222]"
+        flags:
+          no_default_tokens: true
 - slug: jenkins
   projects:
   - name: edgex
