increase size of pv

--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -217,7 +217,7 @@ apiSecret: api-secret
 pvName: sds
 pvAccessMode: ReadWriteOnce
 pvStorageClass: openebs-hostpath
-pvSize: 100Gi
+pvSize: 2TiB
 pvMountPath: '/root/.perceval'
 useResourcesLimits: ''
 nodeHash: ''
