--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -217,7 +217,7 @@ apiSecret: api-secret
 pvName: sds
 pvAccessMode: ReadWriteOnce
 pvStorageClass: openebs-hostpath
-pvSize: 2TiB
+pvSize: 2Ti
 pvMountPath: '/root/.perceval'
 useResourcesLimits: ''
 nodeHash: ''
