--- a/docker-images/Dockerfile
+++ b/docker-images/Dockerfile
@@ -1,6 +1,7 @@
 FROM golang:1.13 AS builder
 RUN apt-get update -y && apt-get upgrade -y && apt-get install -y ca-certificates openssh-client git curl make
 RUN go get -u gopkg.in/yaml.v2
+RUN go get -u github.com/json-iterator/go
 RUN go get -u github.com/LF-Engineering/ssaw/ssawsync
 RUN go get -u github.com/LF-Engineering/sync-data-sources/sources
 WORKDIR /go/src/github.com/LF-Engineering/sync-data-sources/sources
