--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -31,21 +31,21 @@ environments:
       SDS_SCROLL_SIZE: 1000
       SDS_ES_BULKSIZE: 1000
       SDS_TASKS_RE: '^sds-cncf-'        # the opposite of the main task - we specify which tasks should run in this deployment (instead of specifying which tasks should be skipped as in prod-main deployment)
-  - name: prod-korg
-    cron: '0 14 * * *'                   # attempt sync at 8 AM UTC, nothing will happen if the previous sync still runs
-    command_prefix: '/usr/bin'
-    csv_prefix: '/root'
-    cron_env: 'PATH=$PATH:/snap/bin'
-    temp_dir: '/tmp'
-    deploy_env: prod
-    env:
-      SDS_SILENT: 1
-      SDS_TIMEOUT_SECONDS: 344700
-      SDS_TASK_TIMEOUT_SECONDS: 86400
-      SDS_NCPUS_SCALE: 0.35             # here we give max 35% of CPU cores available. So if OS reorts say 10 CPU cores, at most 3 threads will be used.
-      SDS_SCROLL_SIZE: 1000
-      SDS_ES_BULKSIZE: 1000
-      SDS_TASKS_RE: '^sds-korg-'        # the opposite of the main task - we specify which tasks should run in this deployment (instead of specifying which tasks should be skipped as in prod-main deployment)
+#  - name: prod-korg
+#    cron: '0 14 * * *'                   # attempt sync at 8 AM UTC, nothing will happen if the previous sync still runs
+#    command_prefix: '/usr/bin'
+#    csv_prefix: '/root'
+#    cron_env: 'PATH=$PATH:/snap/bin'
+#    temp_dir: '/tmp'
+#    deploy_env: prod
+#    env:
+#      SDS_SILENT: 1
+#      SDS_TIMEOUT_SECONDS: 344700
+#      SDS_TASK_TIMEOUT_SECONDS: 86400
+#      SDS_NCPUS_SCALE: 0.35             # here we give max 35% of CPU cores available. So if OS reorts say 10 CPU cores, at most 3 threads will be used.
+#      SDS_SCROLL_SIZE: 1000
+#      SDS_ES_BULKSIZE: 1000
+#      SDS_TASKS_RE: '^sds-korg-'        # the opposite of the main task - we specify which tasks should run in this deployment (instead of specifying which tasks should be skipped as in prod-main deployment)
   - name: prod-others
     cron: '0 20 * * *'                   # attempt sync at 8 PM UTC, nothing will happen if the previous sync still runs
     command_prefix: '/usr/bin'
