--- a/sources/example/views.yaml
+++ b/sources/example/views.yaml
@@ -2,6 +2,8 @@
 native:
   slug: aliases-views
 aliases:
+  # note that SDS only maintains indices/aliases with 'sds-' prefix
+  # so if you say 'from: abc' that actually means 'from: sds-abc', same with to, views name etc.
 - from: lfn/onap/git-for-merge
   views:
   - name: test-lg/cli
