--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -72,7 +72,7 @@ environments:
     temp_dir: '/tmp'
     env:
       SDS_SILENT: 1
-      SDS_NO_INDEX_DROP: 1              # Do not delete any indices, just issue a warning instead
+      # SDS_NO_INDEX_DROP: 1              # Do not delete any indices, just issue a warning instead
       SDS_NCPUS_SCALE: 2
       SDS_SCROLL_SIZE: 500
       SDS_ES_BULKSIZE: 500
