--- a/sources/Makefile
+++ b/sources/Makefile
@@ -1,8 +1,8 @@
 GO_LIB_FILES=context.go error.go const.go log.go time.go exec.go threads.go fixture.go hash.go task.go github.go es.go redacted.go string.go rocketchat.go gerrit.go slack.go
-GO_BIN_FILES=cmd/syncdatasources/syncdatasources.go cmd/sds-crontab/sds-crontab.go
+GO_BIN_FILES=cmd/syncdatasources/syncdatasources.go cmd/sds-crontab/sds-crontab.go cmd/gen-regexp/gen-regexp.go
 GO_TEST_FILES=context_test.go time_test.go threads_test.go hash_test.go
 GO_LIBTEST_FILES=test/time.go
-GO_BIN_CMDS=github.com/LF-Engineering/sync-data-sources/sources/cmd/syncdatasources github.com/LF-Engineering/sync-data-sources/sources/cmd/sds-crontab
+GO_BIN_CMDS=github.com/LF-Engineering/sync-data-sources/sources/cmd/syncdatasources github.com/LF-Engineering/sync-data-sources/sources/cmd/sds-crontab github.com/LF-Engineering/sync-data-sources/sources/cmd/gen-regexp
 #for race CGO_ENABLED=1
 #GO_ENV=CGO_ENABLED=1
 GO_ENV=CGO_ENABLED=0
@@ -17,7 +17,7 @@ GO_IMPORTS=goimports -w
 GO_USEDEXPORTS=usedexports
 GO_ERRCHECK=errcheck -asserts -ignore '[FS]?[Pp]rint*' -ignoretests
 GO_TEST=go test
-BINARIES=syncdatasources sds-crontab
+BINARIES=syncdatasources sds-crontab gen-regexp
 STRIP=strip
 
 all: check ${BINARIES}
@@ -27,6 +27,9 @@ syncdatasources: cmd/syncdatasources/syncdatasources.go ${GO_LIB_FILES}
 
 sds-crontab: cmd/sds-crontab/sds-crontab.go ${GO_LIB_FILES}
 	 ${GO_ENV} ${GO_BUILD} -o sds-crontab cmd/sds-crontab/sds-crontab.go
+
+gen-regexp: cmd/gen-regexp/gen-regexp.go ${GO_LIB_FILES}
+	 ${GO_ENV} ${GO_BUILD} -o gen-regexp cmd/gen-regexp/gen-regexp.go
 
 fmt: ${GO_BIN_FILES} ${GO_LIB_FILES} ${GO_TEST_FILES} ${GO_LIBTEST_FILES}
 	./for_each_go_file.sh "${GO_FMT}"
